--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -6,21 +6,24 @@ import java.text.SimpleDateFormat
 apply plugin: 'com.android.library'
 
 android {
+    buildFeatures {
+        buildConfig = true
+    }
 
     defaultConfig {
         minSdkVersion 24
-        //noinspection ExpiredTargetSdkVersion
+//noinspection ExpiredTargetSdkVersion
         targetSdkVersion 28
         buildConfigField "String", "APP_BUILD_TIME", '"' + (new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ", Locale.ROOT).format(new Date())) + '"'
+        compileSdkVersion 34
     }
-
-    compileSdkVersion 29
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     namespace = 'com.qualcomm.ftcrobotcontroller'
+
 }
 
 apply from: '../build.dependencies.gradle'
